# solana_case_2

./: README.md  SETUP.md  package-lock.json  package.json
backend/: .env  .env.example  package.json
backend/keys/: platform.json
backend/src/: index.js
backend/src/routes/: issuer.js  property.js  user.js
backend/src/services/: ipfs.js  solana.js  supabase.js
blockchain/: Anchor.toml  package.json
blockchain/programs/citizen_platform/: Cargo.toml
blockchain/programs/citizen_platform/src/: lib.rs
frontend/: .env  .env.local.example  next.config.js  package.json  tailwind.config.js
frontend/.next/: app-build-manifest.json  trace
frontend/.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  asynckit.js  axios.js  call-bind-apply-helpers.js  combined-stream.js  debug.js  delayed-stream.js  dunder-proto.js  es-define-property.js  es-errors.js  es-object-atoms.js  es-set-tostringtag.js  follow-redirects.js  form-data.js  function-bind.js  get-intrinsic.js  get-proto.js  goober.js  gopd.js  has-flag.js  has-symbols.js  has-tostringtag.js  hasown.js  lucide-react.js  math-intrinsics.js  mime-db.js  mime-types.js  ms.js  next.js  object-assign.js  prop-types.js  (+6 more)
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Navbar.tsx  WalletButton.tsx  WalletProvider.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
(+98 files in other folders)
